Corrected search tab overlapping drop down menu bug.

--- a/_formals_css.css
+++ b/_formals_css.css
@@ -192,7 +192,7 @@ li{
 	overflow:hidden;
 	background-color:white;
 	width:320px;
-	z-index:3;
+	z-index:5;
 	position:absolute;
 	background-color: #EEEEEE;
 }
